# unagnt

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES_V1.0.md  RELEASE_NOTES_V2.0.md  RELEASE_NOTES_V3.0.md  SUPPORT.md  go.mod  go.sum
.github/workflows/: ci.yml
api/: openapi.yaml
cmd/agentd/: main.go
cmd/seed-templates/: main.go
cmd/unagnt/: agent.go  approvals.go  context.go  costs.go  debug.go  diff.go  init.go  logs.go  main.go  memory.go  plugin.go  policy.go  replay.go  risk.go  run.go  scaffold.go  sync_cmd.go  tool.go  webhook.go  workflow.go
cmd/unagntd/: main.go
configs/compliance/: README.md
configs/examples/: auth-enterprise.yaml  mcp-tools.yaml  secrets-vault.yaml  workflow-template.yaml
deploy/: Dockerfile  Dockerfile.operator  README.md  docker-compose.production.yml  docker-compose.yml  prometheus.yml
docs/: ARCHITECTURE.md  AUDIT_V3.1.md  AUDIT_V4.md  AUDIT_V5.md  CONTEXT_ASSEMBLY.md  DEPLOYMENT.md  E2E_EXAMPLE.md  EMBEDDINGS.md  MIGRATION_V3.1.md  MIGRATION_V4.md  MIGRATION_V5.md  PRICING.md  RELEASE_READINESS.md  REPLAY_QUICKREF.md  ROI_BENCHMARK.md  SOW_TEMPLATE.md  USER_GUIDE.md  V0.5_QUICKREF.md
k8s/: README.md
migrations/: 015_cost_workflow_analytics.sql  016_model_performance.sql  017_approval_requests.sql  018_ab_test_assignments.sql
scripts/: offline-install.sh
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py
sdk/python/unagnt/: __init__.py  client.py  errors.py  stream.py  types.py
web/: README.md  package-lock.json  package.json
(+267 files in other folders)
